fixed auth page overflow

--- a/src/App.css
+++ b/src/App.css
@@ -134,7 +134,7 @@
 	justify-content: center;
 	align-items: center;
 	flex-direction: column;
-	height: 100vh;
+	height: 90vh;
 	padding: 20px;
 }
 
